syntax = "proto3";

package shuffle;

service Shuffle {
	rpc DownloadFile(DownloadRequest) returns (DownloadResponse);
}

message DownloadRequest {
	string filename = 1;
}

message DownloadResponse {
	bytes data = 1;
}
